EMIdevelopment/src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Margin_Dollar_Amount__c</fullName>
        <description>Margin Amount</description>
        <formula>((UnitPrice - (UnitPrice *  Discount)) *  Quantity) - Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Percent__c</fullName>
        <formula>(((UnitPrice - (UnitPrice *  Discount))  *  Quantity) -  Total_Cost__c ) / ((UnitPrice - (UnitPrice *  Discount))  *  Quantity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <label>Markup</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Detail_Category__c</fullName>
        <formula>TEXT( Product2.Product_Detail_Family__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Detail Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Detail_Family__c</fullName>
        <formula>TEXT( Product2.Product_Detail_Family__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Detail Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Summary_Category__c</fullName>
        <formula>TEXT(Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Summary Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Unit_Cost__c</fullName>
        <description>Product cost</description>
        <formula>Product2.Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product cost</inlineHelpText>
        <label>Product Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Unit_Cost__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Unit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Total Cost = Quantity * Unit Cost</description>
        <formula>Quote_Unit_Cost__c  *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Cost = Quantity * Unit Cost</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Margin_for_rollup_Hidden__c</fullName>
        <description>This field will be updated using a Process</description>
        <label>Total Margin for rollup (Hidden)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Product_Cost_for_rollup_hidden__c</fullName>
        <description>This field will be updated using workflow process</description>
        <label>Total Product Cost for rollup (hidden)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>markedupsalesprice__c</fullName>
        <formula>IF( Markup__c &gt; 0,Product_Unit_Cost__c  + (Markup__c*Product_Unit_Cost__c), UnitPrice )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>markedupsalesprice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>